// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination is emitting page changed event 1`] = `
<div
  class="row"
>
  <div
    class="col text-center"
  >
    <button
      class="btn btn-primary"
      type="button"
    >
      
      previous
    
    </button>
     
    <button
      class="btn btn-primary"
      type="button"
    >
      
      next
    
    </button>
  </div>
</div>
`;

exports[`Pagination is handling first page correctly 1`] = `
<div
  class="row"
>
  <div
    class="col text-center"
  >
    <button
      class="btn btn-primary disabled"
      disabled="disabled"
      type="button"
    >
      
      previous
    
    </button>
     
    <button
      class="btn btn-primary"
      type="button"
    >
      
      next
    
    </button>
  </div>
</div>
`;

exports[`Pagination is handling last page correctly 1`] = `
<div
  class="row"
>
  <div
    class="col text-center"
  >
    <button
      class="btn btn-primary"
      type="button"
    >
      
      previous
    
    </button>
     
    <button
      class="btn btn-primary disabled"
      disabled="disabled"
      type="button"
    >
      
      next
    
    </button>
  </div>
</div>
`;

exports[`Pagination is handling middle page correctly 1`] = `
<div
  class="row"
>
  <div
    class="col text-center"
  >
    <button
      class="btn btn-primary"
      type="button"
    >
      
      previous
    
    </button>
     
    <button
      class="btn btn-primary"
      type="button"
    >
      
      next
    
    </button>
  </div>
</div>
`;
